give demo div min height to avoid jumping animation

--- a/css/main.css
+++ b/css/main.css
@@ -404,6 +404,7 @@ footer .copyright {
 }
 #demo {
     width: 100%;
+    min-height: 500px;
 }
 #try-callout {
     position: absolute;
